--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,11 +2,10 @@ db = {
   connectionPool = "HikariCP"
   dataSourceClass = "org.postgresql.ds.PGSimpleDataSource"
   properties = {
-    serverName = "localhost"
+    serverName = "db"
     portNumber = "5432"
     databaseName = "carsharing"
     user = "postgres"
     password = "example"
   }
-  //    numThreads = 10
 }
