--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,7 +2,7 @@ db = {
   connectionPool = "HikariCP"
   dataSourceClass = "org.postgresql.ds.PGSimpleDataSource"
   properties = {
-    serverName = "db"
+    serverName = "localhost" //change to "db" for docker
     portNumber = "5432"
     databaseName = "carsharing"
     user = "postgres"
